--- a/wercker.yml
+++ b/wercker.yml
@@ -5,8 +5,8 @@
 
 box:
   id: store/oracle/serverjre
-  username: $DOCKER_USERNAME
-  password: $DOCKER_PASSWORD
+  username: $DOCKERHUB_USERNAME
+  password: $DOCKERHUB_PASSWORD
   tag: 8
 
 # this pipeline does not really do anything, it just acts as a fan-out point to run all of test/demo pipelines
