--- a/wercker.yml
+++ b/wercker.yml
@@ -8,6 +8,8 @@ box:
   username: $DOCKERHUB_USERNAME
   password: $DOCKERHUB_PASSWORD
   tag: 8
+  
+box: maven/latest
 
 # this pipeline does not really do anything, it just acts as a fan-out point to run all of test/demo pipelines
 build:
