--- a/wercker.yml
+++ b/wercker.yml
@@ -4,10 +4,7 @@
 #
 
 box:
-  id: openjdk
-  username: $DOCKERHUB_USERNAME
-  password: $DOCKERHUB_PASSWORD
-  tag: 8
+  id: donbeave/oracle-server-jre
   
 box: maven:3.3.9
 
