--- a/wercker.yml
+++ b/wercker.yml
@@ -3,7 +3,7 @@
 # This is a sample that demonstrates how to use the Wercker Maven step.
 #
  
-box: maven:3.3.9
+box: maven:3.2-jdk-7-onbuild
 
 # this pipeline does not really do anything, it just acts as a fan-out point to run all of test/demo pipelines
 build:
