--- a/wercker.yml
+++ b/wercker.yml
@@ -4,7 +4,8 @@
 #
  
 box: maven:3.2-jdk-7-onbuild
-box:openjdk
+box:
+  id: openjdk
 
 # this pipeline does not really do anything, it just acts as a fan-out point to run all of test/demo pipelines
 build:
