--- a/wercker.yml
+++ b/wercker.yml
@@ -8,8 +8,7 @@ box: maven:3.2-jdk-7-onbuild
 
 # this pipeline does not really do anything, it just acts as a fan-out point to run all of test/demo pipelines
 build:
-box:
-  id: openjdk
+  box: openjdk
   steps:
     - java/maven:
       goals: clean install
