--- a/wercker.yml
+++ b/wercker.yml
@@ -3,9 +3,6 @@
 # This is a sample that demonstrates how to use the Wercker Maven step.
 #
  
-box: maven:3.2-jdk-7-onbuild
-
-
 # this pipeline does not really do anything, it just acts as a fan-out point to run all of test/demo pipelines
 build:
   box: openjdk
@@ -20,6 +17,7 @@ build:
         echo "wercker build --pipeline=test-timeout"
 
 regular-test:
+  box: maven:latest
   box: centos
   steps:
     - script:
