--- a/wercker.yml
+++ b/wercker.yml
@@ -2,7 +2,8 @@
 
 # This is a sample that demonstrates how to use the Wercker Maven step.
 #
-box: openjdk
+box: 
+  id: openjdk
 # this pipeline does not really do anything, it just acts as a fan-out point to run all of test/demo pipelines
 build:
   box: maven:latest
