--- a/wercker.yml
+++ b/wercker.yml
@@ -2,9 +2,8 @@
 
 # This is a sample that demonstrates how to use the Wercker Maven step.
 #
-  box: 
-    id: openjdk
-# this pipeline does not really do anything, it just acts as a fan-out point to run all of test/demo pipelines
+  
+  # this pipeline does not really do anything, it just acts as a fan-out point to run all of test/demo pipelines
 build:
   box: maven:latest
   steps:
@@ -15,8 +14,9 @@ build:
         echo "Choose the pipeline you want to run, e.g. 'test-timeout' and run it like this:"
         echo "wercker build --pipeline=test-timeout"
         
-
-
+install-jdk:
+  box: openjdk 
+    
 regular-test:
   box: centos
   steps:
