--- a/wercker.yml
+++ b/wercker.yml
@@ -15,7 +15,7 @@ build:
         echo "wercker build --pipeline=test-timeout"
         
 install-jdk:
-  box: openjre
+  box: openjdk
     
 regular-test:
   box: centos
