--- a/wercker.yml
+++ b/wercker.yml
@@ -34,6 +34,7 @@ regular-test:
     #    tag: 1.0.0
 
 test-with-wercker-cache:
+  box: maven
   steps:
     - script:
       name: Install pre-reqs
