--- a/wercker.yml
+++ b/wercker.yml
@@ -2,10 +2,10 @@
 
 # This is a sample that demonstrates how to use the Wercker Maven step.
 #
-  
+box: centos
   # this pipeline does not really do anything, it just acts as a fan-out point to run all of test/demo pipelines
 build:
-  box: centos
+  box: maven
   steps:
     - script:
       name: Build
