--- a/wercker.yml
+++ b/wercker.yml
@@ -2,7 +2,8 @@
 
 # This is a sample that demonstrates how to use the Wercker Maven step.
 #
-
+box:
+  id: donbeave/oracle-server-jre
   # this pipeline does not really do anything, it just acts as a fan-out point to run all of test/demo pipelines
 build:
   box: maven
@@ -24,7 +25,10 @@ regular-test:
       name: Install pre-reqs
       code: |
         yum -y install tar gzip
-    
+    - java/maven:
+      goals: clean compile
+    - java/maven:
+      goals: install
     # you should push your image now :)
     #  - internal/docker-push:
     #    repository: quay.io/myuser/myapp
