--- a/wercker.yml
+++ b/wercker.yml
@@ -3,7 +3,7 @@
 # This is a sample that demonstrates how to use the Wercker Maven step.
 #
 box:
-  id: maven:latest
+  id: openjdk
   username: $DOCKERHUB_USERNAME
   password: $DOCKERHUB_PASSWORD
   # this pipeline does not really do anything, it just acts as a fan-out point to run all of test/demo pipelines
