--- a/wercker.yml
+++ b/wercker.yml
@@ -3,11 +3,12 @@
 # This is a sample that demonstrates how to use the Wercker Maven step.
 #
 box:
-  id: openjdk
+  id: maven
   username: $DOCKERHUB_USERNAME
   password: $DOCKERHUB_PASSWORD
   # this pipeline does not really do anything, it just acts as a fan-out point to run all of test/demo pipelines
 build:
+  box: projectomakase/server-jre-8
   steps:
     - script:
       name: Build
