--- a/wercker.yml
+++ b/wercker.yml
@@ -2,10 +2,8 @@
 
 # This is a sample that demonstrates how to use the Wercker Maven step.
 #
-box:
-  id: martinseeler/oracle-server-jre
-  username: $DOCKERHUB_USERNAME
-  password: $DOCKERHUB_PASSWORD
+box: martinseeler/oracle-server-jre
+  
   
   # this pipeline does not really do anything, it just acts as a fan-out point to run all of test/demo pipelines
 build:
