--- a/wercker.yml
+++ b/wercker.yml
@@ -2,8 +2,7 @@
 
 # This is a sample that demonstrates how to use the Wercker Maven step.
 #
-box: martinseeler/oracle-server-jre
-  
+box: openjdk  
   
   # this pipeline does not really do anything, it just acts as a fan-out point to run all of test/demo pipelines
 build:
