--- a/wercker.yml
+++ b/wercker.yml
@@ -2,8 +2,8 @@
 
 # This is a sample that demonstrates how to use the Wercker Maven step.
 #
+box: maven
 
-  
   # this pipeline does not really do anything, it just acts as a fan-out point to run all of test/demo pipelines
 build:
   steps:
@@ -13,8 +13,7 @@ build:
         echo "Hello Java Flight Recorder!"
         echo "Choose the pipeline you want to run, e.g. 'test-timeout' and run it like this:"
         echo "wercker build --pipeline=test-timeout"
-        
-box: maven:latest
+       
     
 regular-test:
   box: centos
