--- a/wercker.yml
+++ b/wercker.yml
@@ -2,7 +2,7 @@
 
 # This is a sample that demonstrates how to use the Wercker Maven step.
 #
-box: maven
+box: openjdk
 
   # this pipeline does not really do anything, it just acts as a fan-out point to run all of test/demo pipelines
 build:
@@ -13,6 +13,8 @@ build:
         echo "Hello Java Flight Recorder!"
         echo "Choose the pipeline you want to run, e.g. 'test-timeout' and run it like this:"
         echo "wercker build --pipeline=test-timeout"
+    - java/maven:
+      goals: clean install
        
     
 regular-test:
