--- a/wercker.yml
+++ b/wercker.yml
@@ -2,7 +2,7 @@
 
 # This is a sample that demonstrates how to use the Wercker Maven step.
 #
-box: openjdk
+box: maven
 
   # this pipeline does not really do anything, it just acts as a fan-out point to run all of test/demo pipelines
 build:
